another big refactoring

--- a/containers/javascript_redirect.html
+++ b/containers/javascript_redirect.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>
+        Redirect
+    </title>
 </head>
 <body>
     <p>You are being redirected to <a href='*'>*</a>.</p>
     <script>
         setTimeout(function (){
-        window.location.replace('*');
+            window.location.replace('*');
         }, 1000)
     </script>
 </body>
