--- a/containers/meta_redirect.html
+++ b/containers/meta_redirect.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='refresh' content='2;URL=*'>
-    <title></title>
+    <title>
+        Redirect
+    </title>
 </head>
 <body>
     <p>You are being redirected to <a href='*'>*</a>.</p>    
