--- a/containers/404.html
+++ b/containers/404.html
@@ -2,25 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page not found</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: serif;
+            text-align: center;
+            background-color: #fff;
+        }
+
+        h1 {
+            margin: 14px;
+        }
+
+        p {
+            margin: 4px;
+        }
+    </style>
 </head>
 <body>
-    <section class="bg-white dark:bg-black ">
-        <div class="container flex items-center min-h-screen px-6 py-12 mx-auto">
-            <div class="flex flex-col items-center max-w-sm mx-auto text-center">
-                <p class="p-3 text-sm font-medium text-blue-500 rounded-full bg-blue-50 dark:bg-gray-800">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z" />
-                    </svg>
-                </p>
-                <h1 class="mt-3 text-2xl font-semibold text-gray-800 dark:text-white md:text-3xl">Page not found</h1>
-                <p class="mt-4 text-gray-500 dark:text-gray-400">
-                    The requested URL was not found on this server.
-                </p>
-            </div>
-        </div>
-    </section>
+    <h1>404 Not Found</h1>
+    <hr>
+    <p>Sorry, the page you are looking for could not be found.</p>
 </body>
 </html>
